# bookla-fastapi

./: .gitignore  .pre-commit-config.yaml  Bookla.drawio  README.md  bookla-fasapi  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1bdabda87ada_init_tables.py  20184d8ebe28_init_tables.py  2db32549ae5c_add_tables.py  3edf261e10eb_update_user_is_admin_and_username_fields.py  ed3c3a00f428_add_user_userbook_and_comment_tables.py
app/: database.py  dependencies.py  middlewares.py  models.py  settings.py  tasks.py  utils.py
app/admin/: auth.py  settings.py  views.py
app/crud/: publisher.py  tag.py
app/database/: database.py
app/depends/: dependencies.py
app/models/: __init__.py  author.py  category.py  models.py  publisher.py  tag.py
app/repository/: author.py
app/routers/: __init__.py  auth.py  author.py  book.py  booktagm2m.py  category.py  publisher.py  tag.py  user.py
app/schemas/: __init__.py  auth.py  author.py  book.py  booktagM2M.py  booktagm2m.py  category.py  publisher.py  tag.py
